c/examples/writing-a-c-compiler-tests/tests/chapter_5/valid/return_var.c
int main(void) {
    int a = 2;
    return a;
}