c/examples/writing-a-c-compiler-tests/tests/chapter_5/invalid_semantics/invalid_lvalue.c
int main(void) {
    int a = 2;
    a + 3 = 4;
    return a;
}